--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "router": "^1.3.8"
   },
   "devDependencies": {
     "@types/node": "^20",
