--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-image-gallery": "^1.3.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "router": "^1.3.8"
@@ -25,8 +26,9 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8.57.0",
+    "@types/react-image-gallery": "^1.2.4",
     "@types/react-slick": "^0.23.13",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
