--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
     "react-image-gallery": "^1.3.0",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
