--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@nextui-org/checkbox": "^2.1.4",
+    "@nextui-org/react": "^2.4.6",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
     "react-image-gallery": "^1.3.0",
+    "react-masonry-css": "^1.0.16",
+    "react-responsive-masonry": "^2.3.0",
     "react-slick": "^0.30.2",
     "router": "^1.3.8",
     "slick-carousel": "^1.8.1"
@@ -28,6 +32,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-image-gallery": "^1.2.4",
+    "@types/react-responsive-masonry": "^2.1.3",
     "@types/react-slick": "^0.23.13",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
